# Nanobind_Example

./: .gitignore  CMakeLists.txt  pyproject.toml  vcpkg.json
src/nanobind_example/: example.cpp
